test/base/allow-from-openshift-ingress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-openshift-ingress
spec:
  ingress:
  # - from:
    # - namespaceSelector:
    #     matchLabels:
    #       network.openshift.io/policy-group: ingress
  - from:
    - namespaceSelector:
        matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
          - openshift-ingress
          - openshift-dns          
  podSelector: {}
  policyTypes:
  - Ingress
