test/base/kustomization.yml
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization

resources:
  - allow-all-from-openshift-monitoring.yaml
  - deny-all.yaml
  - allow-namespace.yaml
