test/base/netpol1.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-from-openshift-monitoring
spec:
  podSelector: {} # Apply to all pods in the namespace
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: openshift-monitoring # Ensure the namespace label matches OpenShift Monitoring
